crates/php-parser/tests/snapshots/integration__unclosed_double_quote.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php "unclosed string

=== errors ===
expected ';' after expression
expected ';' after expression
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "unclosed"
          },
          "span": {
            "start": 7,
            "end": 15
          }
        }
      },
      "span": {
        "start": 7,
        "end": 16
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "string"
          },
          "span": {
            "start": 16,
            "end": 22
          }
        }
      },
      "span": {
        "start": 16,
        "end": 23
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 23
  }
}
