crates/php-parser/tests/snapshots/integration__unclosed_heredoc.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture_with_errors(source, &result.errors, &result.program)"
---
=== source ===
<?php <<<EOT
Content

=== errors ===
expected expression
expected expression
expected ';' after expression
expected ';' after expression
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": "Error",
                      "span": {
                        "start": 6,
                        "end": 8
                      }
                    },
                    "op": "ShiftLeft",
                    "right": {
                      "kind": "Error",
                      "span": {
                        "start": 8,
                        "end": 9
                      }
                    }
                  }
                },
                "span": {
                  "start": 6,
                  "end": 9
                }
              },
              "op": "Less",
              "right": {
                "kind": {
                  "Identifier": "EOT"
                },
                "span": {
                  "start": 9,
                  "end": 12
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 12
          }
        }
      },
      "span": {
        "start": 6,
        "end": 13
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Identifier": "Content"
          },
          "span": {
            "start": 13,
            "end": 20
          }
        }
      },
      "span": {
        "start": 13,
        "end": 21
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 21
  }
}
