crates/php-parser/tests/snapshots/integration__use_declarations.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
use App\Models\User;
use App\Services\Auth as AuthService;
use function App\Helpers\formatDate;
use const App\Config\VERSION;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "App",
                  "Models",
                  "User"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 10,
                  "end": 25
                }
              },
              "alias": null,
              "span": {
                "start": 10,
                "end": 25
              }
            }
          ]
        }
      },
      "span": {
        "start": 6,
        "end": 27
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "App",
                  "Services",
                  "Auth"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 31,
                  "end": 49
                }
              },
              "alias": "AuthService",
              "span": {
                "start": 31,
                "end": 63
              }
            }
          ]
        }
      },
      "span": {
        "start": 27,
        "end": 65
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Function",
          "uses": [
            {
              "name": {
                "parts": [
                  "App",
                  "Helpers",
                  "formatDate"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 78,
                  "end": 100
                }
              },
              "alias": null,
              "span": {
                "start": 78,
                "end": 100
              }
            }
          ]
        }
      },
      "span": {
        "start": 65,
        "end": 102
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Const",
          "uses": [
            {
              "name": {
                "parts": [
                  "App",
                  "Config",
                  "VERSION"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 112,
                  "end": 130
                }
              },
              "alias": null,
              "span": {
                "start": 112,
                "end": 130
              }
            }
          ]
        }
      },
      "span": {
        "start": 102,
        "end": 132
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 132
  }
}
